[package]
name = "neatcoin"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
frame-benchmarking-cli = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

neatcoin-rpc = { path = "rpc" }
neatcoin-service = { path = "service" }

funty = "=1.1.0"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

[features]
default = []
runtime-benchmarks = [
	"neatcoin-service/runtime-benchmarks",
]

[workspace]
members = [
	"service",
	"rpc",
	"runtime/neatcoin",
	"runtime/staging",
	"primitives/domain",
	"primitives/opaque",
	"frame/outmove",
	"frame/registry",
	"frame/zone",
	"frame/fcfs",
]
