[package]
name = "neatcoin"
version = "1.3.2"
authors = ["Wei Tang <wei@that.world>"]
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
structopt = "0.3.8"

sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }

futures = "0.3.12"
thiserror = "1.0.23"
jsonrpc-core = "15.1.0"
log = "0.4"
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true }

try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true }

neatcoin-rpc = { path = "rpc" }
neatcoin-service = { path = "service" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate" }

[features]
default = []
try-runtime = [
	"try-runtime-cli",
	"neatcoin-service/try-runtime"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"neatcoin-service/runtime-benchmarks",
]

[workspace]
members = [
	"service",
	"rpc",
	"runtime/neatcoin",
	"runtime/vodka",
	"primitives/domain",
	"primitives/opaque",
	"frame/outmove",
	"frame/registry",
	"frame/zone",
	"frame/fcfs",
	"frame/eons",
	"frame/variables",
	"frame/bootstrap",
]
