[package]
name = "neatcoin-rpc"
version = "1.2.1"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
jsonrpc-core = "18.0.0"
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-keystore = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate" }
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { git = "htts://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate" }
np-opaque = { path = "../primitives/opaque" }
