[package]
name = "neatcoin-rpc"
version = "1.3.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
jsonrpc-core = "18.0.0"
sc-client-api = { path = "../substrate/client/api" }
sp-blockchain = { path = "../substrate/primitives/blockchain" }
sp-keystore = { path = "../substrate/primitives/keystore" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-api = { path = "../substrate/primitives/api" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sp-consensus-babe = { path = "../substrate/primitives/consensus/babe" }
sc-chain-spec = { path = "../substrate/client/chain-spec" }
sc-rpc = { path = "../substrate/client/rpc" }
sc-consensus-babe = { path = "../substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { path = "../substrate/client/consensus/babe/rpc" }
sc-consensus-epochs = { path = "../substrate/client/consensus/epochs" }
sc-finality-grandpa = { path = "../substrate/client/finality-grandpa" }
sc-finality-grandpa-rpc = { path = "../substrate/client/finality-grandpa/rpc" }
sc-keystore = { path = "../substrate/client/keystore" }
sc-sync-state-rpc = { path = "../substrate/client/sync-state-rpc" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool" }
sc-rpc-api = { path = "../substrate/client/rpc-api" }
pallet-contracts-rpc = { path = "../substrate/frame/contracts/rpc" }
sc-transaction-pool-api = { path = "../substrate/client/transaction-pool/api" }
substrate-frame-rpc-system = { path = "../substrate/utils/frame/rpc/system" }
pallet-transaction-payment-rpc = { path = "../substrate/frame/transaction-payment/rpc" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { path = "../substrate/primitives/block-builder" }
pallet-contracts-rpc-runtime-api = { path = "../substrate/frame/contracts/rpc/runtime-api" }
np-opaque = { path = "../primitives/opaque" }
