[package]
name = "neatcoin-service"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "neatcoin" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

jsonrpc-core = "15.1.0"
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
frame-system-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
frame-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

np-opaque = { path = "../primitives/opaque" }
neatcoin-runtime = { path = "../runtime/neatcoin" }
staging-runtime = { path = "../runtime/staging" }

[features]
default = []
runtime-benchmarks = [
	"neatcoin-runtime/runtime-benchmarks",
]
