[package]
name = "neatcoin-service"
version = "1.2.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.3.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }

sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-offchain = { git = "https://github.com/paritytech/substrate" }
sp-session = { git = "https://github.com/paritytech/substrate" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate" }
sp-storage = { git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate" }
sc-network = { git = "https://github.com/paritytech/substrate" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate" }
# sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate" }
sp-trie = { git = "https://github.com/paritytech/substrate" }
sp-timestamp = { git = "https://github.com/paritytech/substrate" }
sp-authorship = { git = "https://github.com/paritytech/substrate" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate" }
pallet-staking = { git = "https://github.com/paritytech/substrate" }

jsonrpc-core = "15.1.0"
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate" }

futures = "0.3.12"
thiserror = "1.0.23"
tracing = "0.1.25"
serde_json = "1.0.59"
hex = "0.4.3"
indexmap = { version = "1.6.2", features = ["serde-1"] }
np-opaque = { path = "../primitives/opaque" }
neatcoin-rpc = { path = "../rpc" }
neatcoin-runtime = { path = "../runtime/neatcoin" }
vodka-runtime = { path = "../runtime/vodka" }

[features]
default = []
runtime-benchmarks = [
	"neatcoin-runtime/runtime-benchmarks",
	"vodka-runtime/runtime-benchmarks",
]
try-runtime = [
	"neatcoin-runtime/try-runtime",
	"vodka-runtime/try-runtime",
]
