[package]
name = "pallet-eons"
version = "1.3.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Eon information recording for later use."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
frame-support = { path = "../../substrate/frame/support", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",
]
