[package]
name = "pallet-fcfs"
version = "1.2.1"
authors = ["Wei Tang <wei@that.world>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/nomonetwork/nomo"
description = "First-come-first-served registrar runtime pallet for Nomo."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
np-domain = { path = "../../primitives/domain", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
primitive-types = { default-features = false, version = "0.10.0" }
pallet-registry = { default-features = false, path = "../registry" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"np-domain/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-registry/std",
]
runtime-benchmarks = ["frame-benchmarking"]
