[package]
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
name = "pallet-outmove"
version = "1.0.0"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
omv = { git = "https://github.com/outmove/omv", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
serde = { version = "1.0.101", optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"omv/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde",
]
