[package]
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
name = "pallet-outmove"
version = "1.3.0"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
omv = { git = "https://github.com/outmove/omv", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
serde = { version = "1.0.101", optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"omv/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde",
]
