[package]
name = "pallet-registry"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nomonetwork/nomo"
description = "Domain registry runtime pallet for Nomo."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
np-domain = { path = "../../primitives/domain", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "neatcoin" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, branch = "neatcoin" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "neatcoin" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"np-domain/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
