[package]
name = "pallet-registry"
version = "1.3.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/nomonetwork/nomo"
description = "Domain registry runtime pallet for Nomo."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
np-domain = { path = "../../primitives/domain", default-features = false }
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
pallet-balances = { default-features = false, path = "../../substrate/frame/balances" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
sp-io = { default-features = false, path = "../../substrate/primitives/io" }

frame-benchmarking = { default-features = false, path = "../../substrate/frame/benchmarking", optional = true }

[dev-dependencies]
sp-core = { path = "../../substrate/primitives/core", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"np-domain/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
