[package]
name = "pallet-zones"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nomonetwork/nomo"
description = "Domain zones runtime pallet for Nomo."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
np-domain = { path = "../../primitives/domain", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
primitive-types = { default-features = false, version = "0.9.0" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"np-domain/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
